--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   xml: ^3.6.1
   flutter:
     sdk: flutter
+  path_provider: ^1.6.8
 
 
   # The following adds the Cupertino Icons font to your application.
